# Arboretum

./: .gitignore  README.md  pyproject.toml
api/: main.py
api/endpoints/: prediction.py
dashboard/: dashboard.py
notebooks/: lgo_prediction.ipynb
services/: model_service.py
